bug no scrollbar vertical onload
offcanvas made overflow:hidden

--- a/music_react_app/src/sass/styles.sass
+++ b/music_react_app/src/sass/styles.sass
@@ -22,6 +22,7 @@ $px1300: 1300px
 body
     background-color: $negroAzulado1
     padding-right: 0 !important//offcanvas footer class adds margin-right: 17px
+    overflow: auto !important //offcanvas makes bug, overflow:hidden == hides vertical scrollbar
     p
         color: $blanco
         text-align: center
